--- a/supplemental-ui/partials/header-content.hbs
+++ b/supplemental-ui/partials/header-content.hbs
@@ -22,6 +22,7 @@
         </div>
 
         <a class="navbar-item" target="_blank" href="https://www.redhat.com/en/products/application-foundations">Red Hat Application Services</a>
+        <a class="navbar-item" target="_blank" href="https://github.com/redhat-solution-patterns/redhat-solution-patterns.github.io/issues">Feedback</a>
         <a class="navbar-item" target="_blank" href="https://developers.redhat.com/app-dev-platform">Learn more</a>
 
       </div>
